Se arregló el bug del collapse y se ajustaron detalles para la segunda preentrega

--- a/css/cards.css
+++ b/css/cards.css
@@ -6,7 +6,7 @@
     height: 100vh;
 } */
 
-.container {
+/* .container {
     margin: 4rem auto;
     padding: 0;
     max-width: 1280px;
@@ -22,7 +22,7 @@
 
 .article__img img {
     max-width: 100%;
-    /* height: 200px; */
+    height: 200px;
     border-radius: 15px 15px 0 0;
     transition: 3s ease all;
 }
@@ -36,7 +36,7 @@
 
 .article__card:hover {
     box-shadow: 0 15px 20px 0 rgba(0, 0, 0, 0.3);
-    /* transform: scale(1.1) */
+    transform: scale(1.1)
 }
 
 .article__content {
@@ -101,4 +101,38 @@
         grid-template-columns: 1fr;
         gap: 3rem;
     }
+} */
+
+.container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 3rem;
+    margin-top: 50px;
 }
+
+.card-title {
+    font-size: 1.5rem;
+    font-weight: 500;
+    font-family: 'Montserrat';
+}
+
+@media screen and (max-width: 990px) {
+    
+    .container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 3rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    
+    .container {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 3rem;
+    }
+}
+
+
+
